--- a/index.html
+++ b/index.html
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Final Website</title>
-</head>
-<body>
-	<h1> THE WEBSITE WILL DEPLOY </h1>
+    <title>Final Website</title>
+    <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="assets/Css/style.css">
 
-</body>
+</head>
+
+<body>
+
+    <div class="container">
+        <header></header>
+
+
+        <nav>
+  	<h2><a href="#">HOME</a>  
+	   <a href="aboutMe.html">ABOUT</a>    
+  	 <a href="resume.html">RESUME</a>
+     <a href="media.html">MEDIA</a>      
+  	 <a href="recipesAFive.html">RECIPES</a>
+  	 <a href="travelMainPage.html">TRAVEL</a>
+  	 <a href="contact.html">CONTACT</a>
+  	</h2>
+        </nav>
+
+       <br></br>
+       <br></br>
+       <br></br>
+       <br></br>
+
+        <center><article>
+        	<div class="news">
+                <div class="ABOUT"><center><img id="indexPhoto" src="assets/images/indexPhoto.jpg" alt="image" width="880" height="600"></center></div> 
+
+        </article></center>
+        
+       <br></br>
+       <br></br>
+       <br></br>
+       <br></br> 
+
+        <center><h2 id="name" class="facts">Alexandra Hopfenberg</h2></center>
+
+     
+       <br></br>
+       <br></br>
+       <br></br>
+       <br></br>
+       <br></br>
+       <br></br>
+  
+    <center><footer>
+
+	<address>
+		&copy;
+		written by <a id="name" href="mailto:ahh71@miami.edu">
+		Alexandra Hopfenberg</a>
+	</address>
+	
+		</footer></center>
+
+    </div><!-- closing container --> 
+ 
+
+	</body>
 </html>
