--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
   <title>Explore</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="assets/Css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
